--- a/GSKC.Web/Content/Styles.css
+++ b/GSKC.Web/Content/Styles.css
@@ -913,3 +913,133 @@ div#Header {
         white-space: nowrap;
     }
 }
+@media (max-width: 767px) {
+
+    .sidenav {
+        position: absolute;
+        /*top: 38px;*/
+        height: 0;
+        width: 0;
+        overflow: hidden;
+        right: 100%;
+        padding: 0;
+        z-index: 1009;
+    }
+
+        .sidenav.on {
+            width: 100%;
+            right: 0;
+            -webkit-transition: all 1s ease 0s;
+            -moz-transition: all 1s ease 0s;
+            -o-transition: all 1s ease 0s;
+            transition: all 1s ease 0s;
+        }
+
+        .sidenav.off {
+            width: 100%;
+            right: 100%;
+            -webkit-transition: all 1s ease 0s;
+            -moz-transition: all 1s ease 0s;
+            -o-transition: all 1s ease 0s;
+            transition: all 1s ease 0s;
+        }
+            
+}
+
+/* Portrait */
+@media screen and (orientation:portrait) {
+    #landscape {visibility:hidden; }
+    #rotateplease {visibility:hidden; }
+}
+             
+#landscape{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #000000;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    z-index: 1032;
+    text-align: center;
+}
+#rotateplease {
+    background: url(/Images/landscape.png) no-repeat scroll 0 0 transparent;
+    color: #FFFFFF;
+    position: absolute;
+    height: 145px;
+    width: 170px;
+    top: 50%;
+    left: 50%;
+    margin-top: -72px;
+    margin-left: -105px; 
+    padding-top: 109px;
+    text-align: center;
+    opacity: 1;
+    z-index: 1032;
+    text-align:center;
+}
+
+#rotateplease p b{
+    width: 170px;
+    margin-top:35px;
+    color: #FFF;
+}
+
+
+/* Calendar styles*/
+
+        #Calendar .calender-container {
+            border: 2px solid #3a3a3a;
+            border-radius: 10px;
+            margin-bottom: 5px;
+            padding: 5px;
+            background-color: gray;
+            color: #e7e7e7;
+            /*cursor: pointer;*/
+            font-family: Arial;
+        }
+
+            #Calendar .calender-container:hover .start-date {
+                background-color: #f39d40;
+            }
+
+            #Calendar .calender-container span {
+                font-family: Arial;
+                font-size: 14px;
+            }
+
+            #Calendar .calender-container div {
+                margin-bottom: 4px;
+            }
+
+            #Calendar .calender-container .event-name {
+                font-size: 14px;
+                font-weight: bold;
+            }
+
+            #Calendar .calender-container .start-date {
+                font-size: 15px;
+                font-weight: bold;
+                color: #FFF;
+                /*border-bottom: 1px dotted #FFF;*/
+                padding: 0px;
+                background-color: #3a3a3a;
+                border-radius: 5px;
+                border-top-left-radius: 0px;
+                border-bottom-left-radius: 0px;
+                height: 20px;
+            }
+
+        #Calendar .calender-image {
+            width: 36px;
+            height: 18px;
+            border: 1px solid #3a3a3a;
+        }
+
+        #Calendar .more-info {
+            color: #000066;
+            text-decoration: underline;
+            font-size: 10px;
+        }
+
