--- a/GSKC.Web/Views/Home/Index.cshtml
+++ b/GSKC.Web/Views/Home/Index.cshtml
@@ -89,8 +89,8 @@
                     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" style="margin-bottom:10px; border-bottom: dotted 0 #000000; padding-bottom: 10px; position: relative; height: 200px; background-color white;">
                         <div style="position:absolute; z-index: 1000; top:0; left:0"><img alt="Deal" src="/Images/Deal.png" /></div>
                         <div style="position:absolute; z-index: 1001; top: 56px;right: 5px;"><span>msrp: </span></div>
-                        <div style="position:absolute; z-index: 1001; top: 70px;right: 5px;"><span style="color: #f08e02;font-size: 1.1em; text-decoration: line-through"><!--ko text: MsrpCost--><!--/ko--></span></div>
-                        <div style="position:absolute; z-index: 1001; top: 95px;right: 3px;color: #FFF;font-size: 1.4em;"><!--ko text: RetailCost--><!--/ko--></div>
+                        <div style="position:absolute; z-index: 1001; top: 70px;right: 5px;"><span style="color: #f08e02;font-size: 1.1em; text-decoration: line-through"><span data-bind="currency: MsrpCost"></span></div>
+                        <div style="position:absolute; z-index: 1001; top: 95px;right: 3px;color: #FFF;font-size: 1.4em;"><span data-bind="currency: RetailCost"></span></div>
                         <div style="position:absolute; z-index: 1000; top:91px; right:0"><img alt="Deal" src="/Images/SalePriceBG.png" /></div>
                         <div style="position:absolute; z-index: 999; top:0; left:0; padding-top: 5px;border: 1px solid #fff; width: 100%">
                             <div data-bind="visible: (LoggedIn() && (GroupId() > 0))" style="position: absolute; right: -6px; bottom: -50px; display:none;">
