--- a/GSKC.Web/Areas/Calendar/Views/Shared/Index.cshtml
+++ b/GSKC.Web/Areas/Calendar/Views/Shared/Index.cshtml
@@ -1,5 +1,4 @@
-﻿    @*<link rel="stylesheet" href="/Content/jquery-ui.css" type="text/css" />
-
+﻿    @*<link rel="stylesheet" href="/Content/jquery-ui.css" type="text/css" />=
     <script language="javascript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script language="javascript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>*@
     <script language="javascript" type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
@@ -15,7 +14,7 @@
 
     <div id="Calendar">
         <div id="calender-parent">
-            <script id="CalendarTemplate" type="x-jquery-tmpl">
+            <script id="CalendarTemplate" type="">
 
                 <div class="calender-container" style="position: relative">
                     <div class="start-date">
